--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            font-family: 'Arial', sans-serif;
+            background-color: #f5f5f5;
             margin: 0;
             padding: 0;
             display: flex;
@@ -17,61 +17,107 @@
 
         form {
             background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+            max-width: 500px;
             width: 100%;
+            position: relative;
         }
 
         label {
             display: block;
-            margin-bottom: 8px;
+            margin-bottom: 12px;
+            color: #333;
+            font-size: 18px;
         }
 
         input, textarea {
             width: 100%;
-            padding: 8px;
-            margin-bottom: 16px;
+            padding: 12px;
+            margin-bottom: 20px;
             box-sizing: border-box;
-            border: 1px solid #ccc;
-            border-radius: 4px;
+            border: 1px solid #ddd;
+            border-radius: 6px;
+            font-size: 16px;
+            color: #555;
         }
 
         input[type="submit"] {
             background-color: #4caf50;
             color: #fff;
-            padding: 10px 15px;
+            padding: 14px 18px;
             border: none;
-            border-radius: 4px;
+            border-radius: 6px;
             cursor: pointer;
-            font-size: 16px;
+            font-size: 18px;
+            transition: background-color 0.3s ease;
         }
 
         input[type="submit"]:hover {
             background-color: #45a049;
         }
+
+        /* Custom Styles for a Creative Look */
+
+        form:before {
+            content: '';
+            position: absolute;
+            top: -20px;
+            left: 50%;
+            transform: translateX(-50%);
+            border: 10px solid transparent;
+            border-bottom-color: #4caf50;
+        }
+
+        form:after {
+            content: '';
+            position: absolute;
+            bottom: -20px;
+            left: 50%;
+            transform: translateX(-50%);
+            border: 10px solid transparent;
+            border-top-color: #4caf50;
+        }
+
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(45deg, #4caf50, #45a049);
+            z-index: -1;
+        }
+
+        h1 {
+            text-align: center;
+            color: #fff;
+            font-size: 36px;
+            margin-bottom: 20px;
+        }
+
     </style>
 </head>
 <body>
 
 <form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8&orgId=00DHo000002IdgY" method="POST">
-    <input type="hidden" name="orgid" value="00DHo000002IdgY">
-    <input type="hidden" name="retURL" value="http://">
+    <h1>Contact Us</h1>
 
-    <label for="name">Contact Name</label>
-    <input id="name" maxlength="80" name="name" size="20" type="text">
+    <label for="name">Your Name</label>
+    <input id="name" maxlength="80" name="name" type="text">
 
-    <label for="email">Email</label>
-    <input id="email" maxlength="80" name="email" size="20" type="text">
+    <label for="email">Your Email</label>
+    <input id="email" maxlength="80" name="email" type="text">
 
-    <label for="phone">Phone</label>
-    <input id="phone" maxlength="40" name="phone" size="20" type="text">
+    <label for="phone">Your Phone</label>
+    <input id="phone" maxlength="40" name="phone" type="text">
 
     <label for="subject">Subject</label>
-    <input id="subject" maxlength="80" name="subject" size="20" type="text">
+    <input id="subject" maxlength="80" name="subject" type="text">
 
-    <label for="description">Description</label>
+    <label for="description">How can we assist you?</label>
     <textarea name="description"></textarea>
 
     <input type="hidden" id="external" name="external" value="1">
@@ -81,4 +127,5 @@
 
 </body>
 </html>
+
 
