--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f5f5f5;
+            background-image:url(https://www.pexels.com/ru-ru/photo/1191710/)
             margin: 0;
             padding: 0;
             display: flex;
