--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-image:url(https://www.pexels.com/ru-ru/photo/1191710/)
+            background-image:url(pexels-alexander-grey-1191710.jpg")
             margin: 0;
             padding: 0;
-            display: flex;
+            display: flex;.
             align-items: center;
             justify-content: center;
             height: 100vh;
