--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-image:url("pexels-alexander-grey-1191710.jpg")
+            background-image:url("pexels-alexander-grey-1191710.jpg");
             margin: 0;
             padding: 0;
             display: flex;.
